manifests/hetzner/n8n/middleware-req-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: n8n-req-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
