manifests/hetzner/n8n/statefulset-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n-postgres
spec:
  selector:
    matchLabels:
      app: n8n-postgres
  serviceName: n8n-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: n8n-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest  # Overridden
        ports:
        - containerPort: 5432
          name: pgport
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: postgres-data
        resources:
          requests:
            memory: 64Mi
          limits:
            memory: 64Mi
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 1Gi
